--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles/main.css">
   <script src="https://code.highcharts.com/highcharts.js"></script>
   <script src="https://code.highcharts.com/themes/avocado.js"></script>
+  <script src="https://use.fontawesome.com/e1b3d30ed3.js"></script>
 </head>
 
 <body>
@@ -38,8 +39,8 @@
   <div class="image " id="explanation1">
     <div class="overlay">
       <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-      <a href="#intro" class="btn btn_round_outline back float-left back"><</a>
-      <a href="#explanation2" class="btn btn_round_outline float-right next">></a>
+      <a href="#intro" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+      <a href="#explanation2" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
       <div class="container">
         <div class="row">
            <div class="col-sm-12 col-md-9 col-lg-5">
@@ -64,8 +65,8 @@
   <div class="image" id="explanation2">
     <div class="overlay">
       <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-      <a href="#explanation1" class="btn btn_round_outline back float-left back"><</a>
-      <a href="#explanation3" class="btn btn_round_outline float-right next">></a>
+      <a href="#explanation1" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+      <a href="#explanation3" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
       <div class="container">
         <div class="row">
            <div class="col-sm-12 col-md-9 col-lg-5">
@@ -91,8 +92,8 @@
  <div class="image" id="explanation3">
    <div class="overlay">
      <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-     <a href="#explanation2" class="btn btn_round_outline back float-left back"><</a>
-     <a href="#explanation4" class="btn btn_round_outline float-right next">></a>
+     <a href="#explanation2" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+     <a href="#explanation4" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
      <div class="container">
        <div class="row">
           <div class="col-sm-12 col-md-9 col-lg-5">
@@ -120,16 +121,49 @@
   <div class="image" id="explanation4">
     <div class="overlay">
       <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-      <a href="#explanation3" class="btn btn_round_outline back float-left back"><</a>
-      <a href="#fr_migration_waves" class="btn btn_round_outline float-right next">></a>
+      <a href="#explanation3" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+      <a href="#explanation5" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
       <div class="container">
         <div class="row">
-           <div class="col-6">
+           <div class="col-sm-12 col-md-9 col-lg-5">
              <div class="text textbox">
                <p>France and Germany have the largest Muslim populations in Europe, but Syrian refugees only make up about one percent of the total population in each country.</p>
+             </div> <!-- close text  -->
+           </div> <!-- close col  -->
+         </div> <!-- close row  -->
+       </div> <!-- close container  -->
+     </div> <!-- close overlay  -->
+  </div>  <!-- close explanation4 section  -->
 
+<div class="image" id="explanation5">
+  <div class="overlay">
+    <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
+    <a href="#explanation4" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+    <a href="#explanation6" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="text textbox">
                <p>The apprehension Europeans feel toward refugees today is fueled in part by their unfavorable views of Muslims already living in Europe.
                </p>
+             </div> <!-- close text  -->
+           </div> <!-- close col  -->
+          <div class="col-lg-6" id="container"></div>
+         </div> <!-- close row  -->
+       </div> <!-- close container  -->
+     </div> <!-- close overlay  -->
+  </div>  <!-- close explanation4 section  -->
+
+  <div class="image" id="explanation6">
+    <div class="overlay">
+      <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
+      <a href="#explanation5" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+      <a href="#fr_migration_waves" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+      <div class="container">
+        <div class="row">
+           <div class="col-sm-12 col-md-9 col-lg-5">
+             <div class="text textbox">
+
 
                <p>To understand the current crisis, it’s essential to look back at previous waves of migration to the region.</p>
 
@@ -140,7 +174,7 @@
 
              </div> <!-- close text  -->
            </div> <!-- close col  -->
-          <div class="col-6" id="container"></div>
+
          </div> <!-- close row  -->
        </div> <!-- close container  -->
      </div> <!-- close overlay  -->
@@ -151,8 +185,8 @@
     <div class="image" id="fr_migration_waves">
       <div class="overlay">
         <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-        <a href="#explanation4" class="btn btn_round_outline back float-left back"><</a>
-        <a href="#fr_economy" class="btn btn_round_outline float-right next">></a>
+        <a href="#explanation4" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+        <a href="#fr_economy" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
         <div class="container">
           <div class="row">
              <div class="col-sm-12 col-md-9 col-lg-5">
@@ -203,8 +237,8 @@
 <div class="image" id="fr_economy">
     <div class="overlay">
       <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-      <a href="#fr_migration_waves" class="btn btn_round_outline back float-left back"><</a>
-      <a href="#ger_migration_waves" class="btn btn_round_outline float-right next">></a>
+      <a href="#fr_migration_waves" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+      <a href="#ger_migration_waves" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
       <div class="container">
         <div class="row">
            <div class="col-sm-12 col-md-9 col-lg-5">
@@ -233,8 +267,8 @@
 <div class="image" id="ger_migration_waves">
   <div class="overlay">
     <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-    <a href="#fr_economy" class="btn btn_round_outline back float-left back"><</a>
-    <a href="#ger_guest" class="btn btn_round_outline float-right next">></a>
+    <a href="#fr_economy" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+    <a href="#ger_guest" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
     <div class="container">
       <div class="row">
          <div class="col-sm-12 col-md-9 col-lg-5">
@@ -258,8 +292,8 @@
 <div class="image" id="ger_guest">
   <div class="overlay">
     <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-    <a href="#ger_migration_waves" class="btn btn_round_outline back float-left back"><</a>
-    <a href="#unemployment" class="btn btn_round_outline float-right next">></a>
+    <a href="#ger_migration_waves" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+    <a href="#unemployment" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
     <div class="container">
       <div class="row">
          <div class="col-sm-12 col-md-9 col-lg-5">
@@ -287,8 +321,8 @@
 <div class="image" id="unemployment">
   <div class="overlay">
     <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-    <a href="#ger_guest" class="btn btn_round_outline back float-left back"><</a>
-    <a href="#far_right" class="btn btn_round_outline float-right next">></a>
+    <a href="#ger_guest" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+    <a href="#far_right" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
     <div class="container">
       <div class="row">
          <div class="col-sm-12 col-md-9 col-lg-5">
@@ -313,8 +347,8 @@
 <div class="image" id="far_right">
   <div class="overlay">
     <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-    <a href="#unemployment" class="btn btn_round_outline back float-left back"><</a>
-    <a href="#" class="btn btn_round_outline float-right next">></a>
+    <a href="#unemployment" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+    <a href="#" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
     <div class="container">
       <div class="row">
          <div class="col-sm-12 col-md-9 col-lg-5">
@@ -412,4 +446,4 @@ Highcharts.chart('container', {
       <script src="scripts/ie10-viewport-bug-workaround.js"></script>
 
 </body>
-</htlm>
+</html>
