--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="row">
            <div class="col-lg-12">
-             <div class="text-center center-block animated fadeIn">
+             <div class="text-center">
                 <p>IDENTITY</p>
                 <p>Closer Look</p>
                 <h1>European Migrant Crisis</h1>
@@ -36,18 +36,34 @@
   </div>  <!-- close intro section  -->
 
 <!-- explanation1 page -->
-  <div class="image " id="explanation1">
+  <div class="image boat" id="explanation1">
     <div class="overlay">
       <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-      <a href="#intro" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+      <a href="#intro" class="btn btn_round_outline float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
       <a href="#explanation2" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
       <div class="container">
         <div class="row">
            <div class="col-sm-12 col-md-9 col-lg-5">
-             <div class="text textbox ">
+             <div class="text textbox">
               <p>For some, Europe’s migrant crisis evokes images like this one: an overcrowded boat carrying Syrian and Iraqi refugees across the Mediterranean Sea.
               </p>
+            </div> <!-- close text  -->
+          </div> <!-- close col  -->
+        </div> <!-- close row  -->
+      </div> <!-- close container  -->
+    </div> <!-- close overlay  -->
+  <!-- insert button here -->
+  </div>  <!-- close explanation1 section  -->
 
+<div class="image boat" id="explanation2">
+  <div class="overlay">
+    <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
+    <a href="#explanation1" class="btn btn_round_outline float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+    <a href="#explanation3" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-9 col-lg-5">
+            <div class="text textbox">
               <p>For others, it conjures up memories of Europe’s recent terrorist attacks, heightens concerns about national security and sparks political debate over the level of access migrants should be granted to the region.
               </p>
 
@@ -62,11 +78,11 @@
   </div>  <!-- close explanation1 section  -->
 
 <!-- explanation2 page -->
-  <div class="image" id="explanation2">
+  <div class="image guard" id="explanation3">
     <div class="overlay">
       <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-      <a href="#explanation1" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
-      <a href="#explanation3" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+      <a href="#explanation2" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+      <a href="#explanation4" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
       <div class="container">
         <div class="row">
            <div class="col-sm-12 col-md-9 col-lg-5">
@@ -89,11 +105,11 @@
  </div>  <!-- close explanation2   -->
 
 <!-- explanation3 page -->
- <div class="image" id="explanation3">
+ <div class="image" id="explanation4">
    <div class="overlay">
      <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-     <a href="#explanation2" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
-     <a href="#explanation4" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+     <a href="#explanation3" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+     <a href="#explanation5" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
      <div class="container">
        <div class="row">
           <div class="col-sm-12 col-md-9 col-lg-5">
@@ -191,7 +207,7 @@
           <div class="row">
              <div class="col-sm-12 col-md-9 col-lg-5">
                <div class="text textbox">
-                 <p>During the industrial revolution and after World War I, the demand for labor in France was high. Consequently, migration was encouraged. Those who migrated to France between 1850 and 1945 originated mostly from neighboring countries, such as Italy, Switzerland and Poland.
+                 <p>During the industrial revolution and after World War I, the demand for labor in France was high and migration was encouraged. Those who migrated to France between 1850 and 1945 originated mostly from neighboring countries, such as Italy, Switzerland and Poland.
                  </p>
 
                  <p>After World War II, the source of immigration shifted from European countries to North African countries, particularly Algeria. According to <a href= "https://www.cia.gov/library/publications/the-world-factbook/geos/ag.html">The World Factbook</a>, 99 percent of Algerians identify as Arab Muslims. Unlike the previous waves of migration, which consisted of white Roman Catholics who had to make minor changes to assimilate to French life, Algerians have different socio-cultural characteristics that made assimilating a harder task.
